--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,12 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
+.Landing {
+    min-width: 100%;
+    min-height: 80%;
+}
+
+.Spline-scene{
+    min-width: 100%;
+    height: 100vh;
+    padding: 0px;
+}
