--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,46 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-.Landing {
-    min-width: 100%;
-    min-height: 80%;
+.body{
+    height: fit-content;
+    
 }
 
-.Spline-scene{
-    min-width: 100%;
+.landing {
+    padding: 20px;
     height: 100vh;
-    padding: 0px;
+    background-color: #2B32B2;
+
+
+
+
+}
+
+.Spline {
+    height: 70vh ;
+    width: 70vw;
+    padding: 50px;
+}
+
+.head-text{
+
+
+    h1 {
+        color: white;
+        font-size: 60px;
+    }
+    h3 {
+        color: white;
+        font-size: 30px;
+    }
+}
+
+#about {
+    background-color: #2B32B2;
+}
+
+@media (max-width: 1028px){
+    .Spline{
+        width: 100vw;
+        height: 100vh;
+    }
 }
