--- a/src/App.css
+++ b/src/App.css
@@ -10946,12 +10946,16 @@ textarea.form-control-lg {
   padding: 0;
 }
 
+#nav {
+  padding: 10px;
+}
+
 .main {
   padding: 20px;
 }
 
 .landing {
-  padding: 20px;
+  padding: 10px;
   height: 100vh;
   background-color: #2B32B2;
 }
@@ -10959,7 +10963,12 @@ textarea.form-control-lg {
 .Spline {
   height: 70vh;
   width: 70vw;
-  padding: 50px;
+  padding: 20px;
+}
+@media (max-width: 1024px) {
+  .Spline {
+    transform: scale(0.5);
+  }
 }
 
 .head-text h1, .head-text .h1 {
@@ -10985,6 +10994,10 @@ textarea.form-control-lg {
   font-size: 30px;
   color: white;
 }
+.skills li {
+  list-style-type: none;
+  color: white;
+}
 
 .skills-head {
   font-weight: 50px;
@@ -10993,7 +11006,6 @@ textarea.form-control-lg {
 
 @media (max-width: 1028px) {
   .Spline {
-    width: 100vw;
-    height: 100vh;
+    transform: scale(0.8);
   }
 }/*# sourceMappingURL=App.css.map */
