--- a/src/App.css
+++ b/src/App.css
@@ -10937,9 +10937,7 @@ textarea.form-control-lg {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100vw;
 }
 
 .container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
@@ -10963,17 +10961,23 @@ textarea.form-control-lg {
 .main {
   padding: 20px;
 }
+.main .land {
+  width: 100vw;
+}
 
 .landing {
   padding: 10px;
   height: 100vh;
+  width: 100vw;
   background-color: #2B32B2;
+  margin: 0;
 }
 
 .Spline {
   height: 70vh;
   width: 70vw;
   padding: 20px;
+  transform: scale(0.8);
 }
 @media (max-width: 1024px) {
   .Spline {
@@ -10992,6 +10996,7 @@ textarea.form-control-lg {
 
 #about {
   background-color: #2B32B2;
+  width: 100vw;
 }
 #about .about-section {
   height: -webkit-fit-content;
@@ -11023,14 +11028,19 @@ textarea.form-control-lg {
   padding: 100px;
   display: flex;
   background-color: #2B32B2;
+  align-items: center;
+  width: 100vw;
+}
+#projects .project-head {
+  height: 10vh;
 }
 
 .project-card {
-  width: 18rem;
+  width: 15rem;
   margin: 10vh;
 }
 
 .project-cards {
-  padding: 3% 2%;
+  padding: 1% 1%;
   justify-content: space-evenly;
 }/*# sourceMappingURL=App.css.map */
